bug fix: \n and extra spaces elimination on the source code file on adapt method

--- a/src/visualizationPanel/main.css
+++ b/src/visualizationPanel/main.css
@@ -44,3 +44,6 @@ body {
   width: 50%;
   border: 4px solid #050500;
 }
+h1 {
+  color: #050500;
+}
